# nbted

./: .build.yml  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  nbted.1
src/: data.rs  iter_replacer.rs  lib.rs  main.rs  read.rs  string_read.rs  string_write.rs  write.rs
src/tests/: custom.nbt  iter_replacer.rs  mod.rs  string_read.rs  tests_data.rs
src/unstable/: data.rs  iter_replacer.rs  mod.rs  read.rs  serde_definitions.rs  string_read.rs  string_write.rs  write.rs
src/unstable/tests/: iter_replacer.rs  json_serialize.rs  mod.rs  string_read.rs
tests/: compression.rs  datatest.rs
tests/string_read/: compression_none.txt  compression_uncompressed.txt  compression_unspecified.txt  list_len.txt
tests/string_read_err/: empty_file.err  invalid_compression.err  invalid_compression.txt  list_len_double_bracket.err  list_len_double_bracket.txt  list_len_invalid_len_combined.err  list_len_invalid_len_combined.txt  list_len_invalid_len_in_brackets.err  list_len_invalid_len_in_brackets.txt  list_len_invalid_len_separate_token.err  list_len_invalid_len_separate_token.txt  list_len_too_long.err  list_len_too_long.txt  list_len_too_short.err  list_len_too_short.txt  list_negative_length.err  list_negative_length.txt  multiple_compression_formats.err  multiple_compression_formats.txt  root_not_compound.err  root_not_compound.txt
tests/string_write/: bigtest.compressed.txt  bigtest.uncompressed.txt  bigtest.zlib.txt  custom.uncompressed.txt  empty_end.txt  playerfile.uncompressed.txt
