[package]
name = "nbted"
version = "1.4.2"
authors = ["C4K3 <crates.io@c4k3.net>"]
build = "build.rs"
repository = "https://github.com/C4K3/nbted"
description = "Command-line NBT editor"
license = "CC0-1.0"
keywords = ["nbt"]
categories = ["command-line-utilities"]

[dependencies]
byteorder = "1"
flate2 = "1"
getopts = "0.2"
regex = "1"
tempdir = "0.3"
error-chain = "0.12"
