[package]
name = "nbted"
version = "1.5.1"
authors = ["C4K3 <crates.io@c4k3.net>"]
build = "build.rs"
repository = "https://github.com/C4K3/nbted"
description = "Command-line NBT editor"
license = "CC0-1.0"
keywords = ["nbt"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
byteorder = "1"
flate2 = "1"
getopts = "0.2"
tempfile = "3"
anyhow = "1"
